Squashed commit of the following:
commit 64bdaa90cd95fab4e3517a002da1c49e17f3b2aa
Author: Rick Casson <4932864+rickcasson@users.noreply.github.com>
Date:   Wed Dec 20 10:45:00 2023 -0800

    Added revokeAllPermissions method and update readme

commit c6a5479b6a51430ea8e95afb1daa084ca9b72998
Author: Rick Casson <4932864+rickcasson@users.noreply.github.com>
Date:   Tue Dec 19 18:21:55 2023 -0800

    roll back gradle changes and only include used permissions in AndroidManifest

commit 9a1a47b1440fd35851144301ae6b7478488ccf7f
Author: Rick Casson <4932864+rickcasson@users.noreply.github.com>
Date:   Tue Dec 19 15:25:36 2023 -0800

    Update example and readme

commit c20aa7b7b345ed4cd51e2f2638e7e924b4cf0ac4
Author: Rick Casson <4932864+rickcasson@users.noreply.github.com>
Date:   Fri Dec 15 11:18:34 2023 -0800

    Add more control over permission types

commit a08521f62ad66b5a5d999bd4a92610b72b21c1a3
Author: Rick Casson <4932864+rickcasson@users.noreply.github.com>
Date:   Thu Dec 14 16:22:51 2023 -0800

    Remove old sleep stage record

commit d937e1bc7d05671f529b669456389da05d6fa564
Author: Rick Casson <4932864+rickcasson@users.noreply.github.com>
Date:   Mon Dec 4 23:37:54 2023 +1300

    refactor timezone offset parsing

commit ba59e364cca597e719c1761d2a9b8a2576cb3176
Author: Rick Casson <4932864+rickcasson@users.noreply.github.com>
Date:   Tue Nov 21 14:14:54 2023 +1300

    Fixes to support Android 14

commit b57f6522d3829a3185e3fb00b46e49b2b2758d5a
Author: Rick Casson <4932864+rickcasson@users.noreply.github.com>
Date:   Fri Nov 17 21:36:59 2023 -0800

    clean up logs

commit a705a6b2b11e91b6080afc944a7fc12497aaec9c
Author: Rick Casson <4932864+rickcasson@users.noreply.github.com>
Date:   Fri Nov 17 21:09:56 2023 -0800

    just reply true

commit 8597a2427a5e2dc85c1c401b1e33396d4cef92da
Author: Rick Casson <4932864+rickcasson@users.noreply.github.com>
Date:   Fri Nov 17 20:11:18 2023 -0800

    add delete records logs

commit 1916dce7fec2f646b6a36e23d8bd5f

--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -26,8 +26,10 @@ apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
-    compileSdkVersion 33
+    compileSdk 34
     ndkVersion flutter.ndkVersion
+
+    namespace = "dev.duynp.flutter_health_connect_example"
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -67,5 +69,5 @@ flutter {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 }
